force-app/main/default/objects/Quote_Document_Run__c/Quote_Document_Run__c.object-meta.xml
<CustomObject>
    <description
  >Durable, sanitized operational evidence for one Quote Document Totals generation, invalidation, retention, or delivery run.</description>
    <label>Quote Document Run</label>
    <nameField>
        <displayFormat>QDR-{0000000000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Document Runs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>