force-app/main/default/objects/Quote_Document_Run__c/fields/Completed_At__c.field-meta.xml
<CustomField><fullName
  >Completed_At__c</fullName><label>Completed At</label><required
  >false</required><type>DateTime</type></CustomField>