force-app/main/default/objects/Quote_Document_Run__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description
  >Batch, queue, or request identifier used to correlate platform execution with this sanitized run.</description>
    <externalId>true</externalId>
    <label>Correlation Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>