force-app/main/default/objects/Quote_Document_Run__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <description
  >Stable operation family. It contains no Quote or customer content.</description>
    <label>Operation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Generation</fullName><default>false</default><label
        >Generation</label></value>
            <value><fullName>Invalidation</fullName><default
        >false</default><label>Invalidation</label></value>
            <value><fullName>Retention</fullName><default>false</default><label
        >Retention</label></value>
            <value><fullName>Document Delivery</fullName><default
        >false</default><label>Document Delivery</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>