force-app/main/default/objects/Quote_Document_Run__c/fields/Platform_Error_Count__c.field-meta.xml
<CustomField><fullName
  >Platform_Error_Count__c</fullName><defaultValue>0</defaultValue><label
  >Platform Error Count</label><precision>18</precision><required
  >false</required><scale>0</scale><type>Number</type></CustomField>