force-app/main/default/objects/Quote_Document_Run__c/fields/Source_Version__c.field-meta.xml
<CustomField><fullName
  >Source_Version__c</fullName><description
  >Repository release identity, distinct from payload and contributor versions.</description><label
  >Source Version</label><length>40</length><required>true</required><type
  >Text</type></CustomField>