force-app/main/default/objects/Quote_Document_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Running</fullName><default>true</default><label
        >Running</label></value>
            <value><fullName>Succeeded</fullName><default>false</default><label
        >Succeeded</label></value>
            <value><fullName>Completed with Errors</fullName><default
        >false</default><label>Completed with Errors</label></value>
            <value><fullName>Failed</fullName><default>false</default><label
        >Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>