force-app/main/default/objects/Quote_Document_Run__c/fields/Summary__c.field-meta.xml
<CustomField><fullName
  >Summary__c</fullName><description
  >Sanitized outcome summary. Never store exception text or customer content.</description><label
  >Summary</label><length>255</length><required>false</required><type
  >Text</type></CustomField>