force-app/main/default/objects/Quote_Document_Run__c/listViews/Recent_Runs.listView-meta.xml
<ListView>
    <fullName>Recent_Runs</fullName>
    <columns>NAME</columns>
    <columns>Operation_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Started_At__c</columns>
    <columns>Completed_At__c</columns>
    <columns>Processed_Count__c</columns>
    <columns>Failed_Count__c</columns>
    <columns>Platform_Error_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Runs</label>
</ListView>